--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <title>Trevor Crowell</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="a cloud">
       <h1>I'm Trevor.</h1>
-      <p>a <span class="pro">pro</span>grammer.</p>
+      <h2>a <span class="pro">pro</span>grammer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="a cloud">
       <img src="images/mountain.png" alt="mountain-image">
       </div>
@@ -18,27 +24,27 @@
         <div class="profile">
           <img  class="me" src="./me.png" alt="trevor-image">
           <h2>Hello.</h2>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p>I'm a aspiring web developer with a passion to learn and grow in the tech field.</p>
         </div>
         <hr>
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="" src="" alt="">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+            <img class="skill-1" src="https://media2.giphy.com/media/ZDTbix65Me1YDNLDF3/giphy.gif?cid=ecf05e47bb2m1xqpcf251hrky03ismg5bnulv0n37fszmdou&rid=giphy.gif&ct=ts" alt="html-gif">
+            <h3>Web Development</h3>
+            <p class="intro">I am currently learning Web Development and continue to improve.</p>
           </div>
           <div class="skill-row">
-            <img class="" src="" alt="">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+            <img class="skill-2" src="https://cdn-icons-png.flaticon.com/512/6124/6124995.png" alt="tux-image">
+            <h3>Linux</h3>
+            <p>I have been primarily using linux for the last 3 years, and comfortable with troubleshooting any issue that arises. I am most comfortable with Debian based systems.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3>Feel free to get a hold of me.</h3>
+          <p>I would love to discuss any possible opportunity for employment.</p>
           <a class="btn" href="mailto:trevor.crowell1985@gamil.com">CONTACT ME</a>
         </div>
       </div>
@@ -46,7 +52,7 @@
       
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/trevor-crowell">LinkedIn</a>
-        <p>© 2022 Trevor Crowell.</p>
+        <p class="copyS">© 2022 Trevor Crowell.</p>
       </div>
       
     </div>
