--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="profile">
           <img  class="me" src="./me.png" alt="trevor-image">
           <h2>Hello.</h2>
-          <p>I'm a aspiring web developer with a passion to learn and grow in the tech field.</p>
+          <p class="intro">I'm a aspiring web developer with a passion to learn and grow in the tech field.</p>
         </div>
         <hr>
         <div class="skills">
@@ -32,7 +32,7 @@
           <div class="skill-row">
             <img class="skill-1" src="https://media2.giphy.com/media/ZDTbix65Me1YDNLDF3/giphy.gif?cid=ecf05e47bb2m1xqpcf251hrky03ismg5bnulv0n37fszmdou&rid=giphy.gif&ct=ts" alt="html-gif">
             <h3>Web Development</h3>
-            <p class="intro">I am currently learning Web Development and continue to improve.</p>
+            <p>I am currently learning Web Development and continue to improve.</p>
           </div>
           <div class="skill-row">
             <img class="skill-2" src="https://cdn-icons-png.flaticon.com/512/6124/6124995.png" alt="tux-image">
